// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonaCoin renders a coin with a contact icon 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #0078D4;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <i
    aria-hidden={true}
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons-0";
          font-size: 19.2px;
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
    data-icon-name="Contact"
  >
    
  </i>
</div>
`;

exports[`PersonaCoin renders a coin with a contact icon for a Chinese name 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #69797E;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <i
    aria-hidden={true}
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons-0";
          font-size: 19.2px;
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
    data-icon-name="Contact"
  >
    
  </i>
</div>
`;

exports[`PersonaCoin renders a coin with the initials JB 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #0078D4;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <span
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          display: inline;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 19.2px;
          font-weight: 400;
          moz-osx-font-smoothing: grayscale;
          webkit-font-smoothing: antialiased;
        }
  >
    JB
  </span>
</div>
`;

exports[`PersonaCoin renders a correct persona 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #A4262C;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <span
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          display: inline;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 19.2px;
          font-weight: 400;
          moz-osx-font-smoothing: grayscale;
          webkit-font-smoothing: antialiased;
        }
  >
    JB
  </span>
</div>
`;

exports[`PersonaCoin renders a red coin 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: red;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <span
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          display: inline;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 19.2px;
          font-weight: 400;
          moz-osx-font-smoothing: grayscale;
          webkit-font-smoothing: antialiased;
        }
  >
    JB
  </span>
</div>
`;

exports[`PersonaCoin renders presence correctly when a very large coin is rendered 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #69797E;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 100px;
        justify-content: center;
        position: relative;
        width: 100px;
      }
>
  <i
    aria-hidden={true}
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons-0";
          font-size: 40px;
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
    data-icon-name="Contact"
  >
    
  </i>
  <div
    className=
        ms-Persona-presence
        {
          -ms-high-contrast-adjust: none;
          background-clip: border-box;
          background-color: #C50F1F;
          border-radius: 50%;
          border: 2px solid #ffffff;
          bottom: -2px;
          box-sizing: content-box;
          forced-color-adjust: none;
          height: 12px;
          position: absolute;
          right: -2px;
          text-align: center;
          top: auto;
          width: 12px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
          background-color: WindowText;
          border-color: Window;
        }
    role="presentation"
    style={
      Object {
        "height": "33.333333333333336px",
        "width": "33.333333333333336px",
      }
    }
  >
    <i
      aria-hidden={true}
      className=
          ms-Persona-presenceIcon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #ffffff;
            display: inline-block;
            font-family: "FabricMDL2Icons";
            font-size: 6px;
            font-style: normal;
            font-weight: normal;
            line-height: 12px;
            speak: none;
            vertical-align: top;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            color: Window;
          }
      data-icon-name="SkypeMinus"
      style={
        Object {
          "fontSize": "16.666666666666668px",
          "lineHeight": "33.333333333333336px",
        }
      }
    >
      
    </i>
  </div>
</div>
`;

exports[`PersonaCoin renders presence when it is passed 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #69797E;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <i
    aria-hidden={true}
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: inline-block;
          font-family: "FabricMDL2Icons-0";
          font-size: 19.2px;
          font-style: normal;
          font-weight: normal;
          speak: none;
        }
    data-icon-name="Contact"
  >
    
  </i>
  <div
    className=
        ms-Persona-presence
        {
          -ms-high-contrast-adjust: none;
          background-clip: border-box;
          background-color: #C50F1F;
          border-radius: 50%;
          border: 2px solid #ffffff;
          bottom: -2px;
          box-sizing: content-box;
          forced-color-adjust: none;
          height: 12px;
          position: absolute;
          right: -2px;
          text-align: center;
          top: auto;
          width: 12px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
          background-color: WindowText;
          border-color: Window;
        }
    role="presentation"
    style={
      Object {
        "height": "16px",
        "width": "16px",
      }
    }
  >
    <i
      aria-hidden={true}
      className=
          ms-Persona-presenceIcon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #ffffff;
            display: inline-block;
            font-family: "FabricMDL2Icons";
            font-size: 6px;
            font-style: normal;
            font-weight: normal;
            line-height: 12px;
            speak: none;
            vertical-align: top;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
            color: Window;
          }
      data-icon-name="SkypeMinus"
      style={
        Object {
          "fontSize": "8px",
          "lineHeight": "16px",
        }
      }
    >
      
    </i>
  </div>
</div>
`;

exports[`PersonaCoin renders the coin with the provided image 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        background-color: #69797E;
        border-radius: 50%;
        color: white;
        display: flex;
        height: 48px;
        justify-content: center;
        position: relative;
        width: 48px;
      }
>
  <span
    className=
        test-cn-initials
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          display: inline;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 19.2px;
          font-weight: 400;
          moz-osx-font-smoothing: grayscale;
          webkit-font-smoothing: antialiased;
        }
  >
    EG
  </span>
  <div
    className=
        ms-Image
        test-cn-image
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          border-radius: 50%;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 48px;
          left: 0px;
          overflow: hidden;
          position: absolute;
          top: 0px;
          width: 48px;
        }
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
  >
    <img
      alt=""
      className=
          ms-Image-image
          ms-Image-image--cover
          ms-Image-image--portrait
          is-notLoaded
          is-fadeIn
          {
            display: block;
            height: 100%;
            object-fit: cover;
            opacity: 0;
            width: 100%;
          }
      onError={[Function]}
      onLoad={[Function]}
      src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets//persona-male.png"
    />
  </div>
</div>
`;
